packages/jsii/test/negatives/neg.implementing-method-changes-optionality.2.ts
// Attempt to change optionality of method parameter
export class ParentClass {
  public method(_required: string, _optional?: number): void {
    // ...
  }
}

export class Implementor extends ParentClass {
  public method(_required: string, _optional: number): void {
    // ...
  }
}
